--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "trip-planner",
+  "name": "wild-find",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "npm run start-server & npm run build-watch",
-    "start-server": "nodemon server/app.js --ignore public",
-    "build-watch": "webpack -w",
+    "start:dev": "webpack -w & nodemon server/app.js",
     "start": "npm run start:dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0"
+    "nodemon": "^1.17.5",
+    "webpack": "^3.6.0"
   },
   "dependencies": {
-    "mapbox-gl": "^0.40.1"
+    "bluebird": "^2.10.2",
+    "d3": "^5.4.0",
+    "d3-fetch": "^1.1.0",
+    "express": "^4.13.3",
+    "mapbox-gl": "^0.40.1",
+    "volleyball": "^1.4.1"
   }
 }
