--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^6.4.1",
     "nodemon": "^1.17.5",
     "webpack": "^3.6.0"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "bluebird": "^2.10.2",
     "d3": "^5.4.0",
     "d3-fetch": "^1.1.0",
     "express": "^4.13.3",
     "mapbox-gl": "^0.40.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "volleyball": "^1.4.1"
   }
 }
